# functioning-rag

./: .gitignore  pyproject.toml  requirement.txt  step1_load.py  step2_chunk.py  step3_embed.py  step4_vectorstore.py  step5_rag-chain.py  step6_conversational_rag.py  test_setup.py
data/: company_policy.txt
